--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
 <html>
   <head>
     <title>Board controller</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="main.js"></script>
+    <link rel="stylesheet" href="style.css"></link>
   </head>
   <body>
-    <button onclick="connect()">Connect</button>
-    <button onclick="writeOnDesc()">Write</button>
+    <div class="item">
+      <button id="connect" onclick="connect()">Connect</button>
+      <button id="write" disabled onclick="writeOnDesc()">Write</button>
+    </div>
+    <div class="item">
+        <p>First characteristic,<br>first service</p>
+      </div>
+    <div class="item">
+      <input id="slider" type="range" orient="vertical" value="0" max="255" oninput="writeValue()" disabled />
+    </div>
+    <div class="item">
+      <pre class="console" id="console"></pre>
+    </div>
   </body>
 </html>
